@@ -1,3 +1,8 @@
+Mon Jun 25 16:43:13 2007  Tim Janik  <timj@gtk.org>
+
+	* glib/ghash.c: g_hash_table_find(), g_hash_table_foreach():
+	document performance caveats for linear order searches.
+
 2007-06-22  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
 
 	* glib/gstring.c: Use memcpy in g_string_append_vprintf (#57693).
